// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchListControl should render a search box and list of hierarchical options 1`] = `
<div
  className="woocommerce-search-list "
>
  <div
    className="woocommerce-search-list__selected"
  >
    <div
      className="woocommerce-search-list__selected-header"
    >
      <strong>
        0 items selected
      </strong>
    </div>
  </div>
  <div
    className="woocommerce-search-list__search"
  >
    <div
      className="components-base-control"
    >
      <div
        className="components-base-control__field"
      >
        <label
          className="components-base-control__label"
          htmlFor="inspector-text-control-10"
        >
          Search for items
        </label>
        <input
          className="components-text-control__input"
          id="inspector-text-control-10"
          onChange={[Function]}
          type="search"
        />
      </div>
    </div>
  </div>
  <div
    className="woocommerce-search-list__list components-menu-group"
  >
    <div
      aria-hidden="true"
      className="components-menu-group__label"
      id="components-menu-group-label-8"
    >
      Results
    </div>
    <div
      aria-labelledby="components-menu-group-label-8"
      role="group"
    >
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Apricots",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-1"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-prefix"
          >
            Apricots
          </span>
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Clementine",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-1"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-prefix"
          >
            Apricots
          </span>
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Elderberry",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-2"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-prefix"
          >
            Apricots › Elderberry
          </span>
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Guava",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Lychee",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Mulberry",
              }
            }
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SearchListControl should render a search box and list of options 1`] = `
<div
  className="woocommerce-search-list "
>
  <div
    className="woocommerce-search-list__selected"
  >
    <div
      className="woocommerce-search-list__selected-header"
    >
      <strong>
        0 items selected
      </strong>
    </div>
  </div>
  <div
    className="woocommerce-search-list__search"
  >
    <div
      className="components-base-control"
    >
      <div
        className="components-base-control__field"
      >
        <label
          className="components-base-control__label"
          htmlFor="inspector-text-control-0"
        >
          Search for items
        </label>
        <input
          className="components-text-control__input"
          id="inspector-text-control-0"
          onChange={[Function]}
          type="search"
        />
      </div>
    </div>
  </div>
  <div
    className="woocommerce-search-list__list components-menu-group"
  >
    <div
      aria-hidden="true"
      className="components-menu-group__label"
      id="components-menu-group-label-0"
    >
      Results
    </div>
    <div
      aria-labelledby="components-menu-group-label-0"
      role="group"
    >
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Apricots",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Clementine",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Elderberry",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Guava",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Lychee",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Mulberry",
              }
            }
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SearchListControl should render a search box and list of options with a custom className 1`] = `
<div
  className="woocommerce-search-list test-search"
>
  <div
    className="woocommerce-search-list__selected"
  >
    <div
      className="woocommerce-search-list__selected-header"
    >
      <strong>
        0 items selected
      </strong>
    </div>
  </div>
  <div
    className="woocommerce-search-list__search"
  >
    <div
      className="components-base-control"
    >
      <div
        className="components-base-control__field"
      >
        <label
          className="components-base-control__label"
          htmlFor="inspector-text-control-1"
        >
          Search for items
        </label>
        <input
          className="components-text-control__input"
          id="inspector-text-control-1"
          onChange={[Function]}
          type="search"
        />
      </div>
    </div>
  </div>
  <div
    className="woocommerce-search-list__list components-menu-group"
  >
    <div
      aria-hidden="true"
      className="components-menu-group__label"
      id="components-menu-group-label-1"
    >
      Results
    </div>
    <div
      aria-labelledby="components-menu-group-label-1"
      role="group"
    >
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Apricots",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Clementine",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Elderberry",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Guava",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Lychee",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Mulberry",
              }
            }
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SearchListControl should render a search box and list of options, with a custom render callback for each item 1`] = `
<div
  className="woocommerce-search-list "
>
  <div
    className="woocommerce-search-list__selected"
  >
    <div
      className="woocommerce-search-list__selected-header"
    >
      <strong>
        0 items selected
      </strong>
    </div>
  </div>
  <div
    className="woocommerce-search-list__search"
  >
    <div
      className="components-base-control"
    >
      <div
        className="components-base-control__field"
      >
        <label
          className="components-base-control__label"
          htmlFor="inspector-text-control-9"
        >
          Search for items
        </label>
        <input
          className="components-text-control__input"
          id="inspector-text-control-9"
          onChange={[Function]}
          type="search"
        />
      </div>
    </div>
  </div>
  <div
    className="woocommerce-search-list__list components-menu-group"
  >
    <div
      aria-hidden="true"
      className="components-menu-group__label"
      id="components-menu-group-label-7"
    >
      Results
    </div>
    <div
      aria-labelledby="components-menu-group-label-7"
      role="group"
    >
      <div>
        Apricots
        !
      </div>
      <div>
        Clementine
        !
      </div>
      <div>
        Elderberry
        !
      </div>
      <div>
        Guava
        !
      </div>
      <div>
        Lychee
        !
      </div>
      <div>
        Mulberry
        !
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchListControl should render a search box and list of options, with a custom search input message 1`] = `
<div
  className="woocommerce-search-list "
>
  <div
    className="woocommerce-search-list__selected"
  >
    <div
      className="woocommerce-search-list__selected-header"
    >
      <strong>
        0 items selected
      </strong>
    </div>
  </div>
  <div
    className="woocommerce-search-list__search"
  >
    <div
      className="components-base-control"
    >
      <div
        className="components-base-control__field"
      >
        <label
          className="components-base-control__label"
          htmlFor="inspector-text-control-8"
        >
          Testing search label
        </label>
        <input
          className="components-text-control__input"
          id="inspector-text-control-8"
          onChange={[Function]}
          type="search"
        />
      </div>
    </div>
  </div>
  <div
    className="woocommerce-search-list__list components-menu-group"
  >
    <div
      aria-hidden="true"
      className="components-menu-group__label"
      id="components-menu-group-label-6"
    >
      Results
    </div>
    <div
      aria-labelledby="components-menu-group-label-6"
      role="group"
    >
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Apricots",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Clementine",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Elderberry",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Guava",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Lychee",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Mulberry",
              }
            }
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SearchListControl should render a search box and no options 1`] = `
<div
  className="woocommerce-search-list "
>
  <div
    className="woocommerce-search-list__selected"
  >
    <div
      className="woocommerce-search-list__selected-header"
    >
      <strong>
        0 items selected
      </strong>
    </div>
  </div>
  <div
    className="woocommerce-search-list__search"
  >
    <div
      className="components-base-control"
    >
      <div
        className="components-base-control__field"
      >
        <label
          className="components-base-control__label"
          htmlFor="inspector-text-control-4"
        >
          Search for items
        </label>
        <input
          className="components-text-control__input"
          id="inspector-text-control-4"
          onChange={[Function]}
          type="search"
        />
      </div>
    </div>
  </div>
  <div
    className="woocommerce-search-list__list is-not-found"
  >
    <span
      className="woocommerce-search-list__not-found-icon"
    >
      <svg
        aria-hidden="true"
        className="gridicon gridicons-notice-outline"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M12 4c4.41 0 8 3.59 8 8s-3.59 8-8 8-8-3.59-8-8 3.59-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
          />
        </g>
      </svg>
    </span>
    <span
      className="woocommerce-search-list__not-found-text"
    >
      No items found.
    </span>
  </div>
</div>
`;

exports[`SearchListControl should render a search box with a search term, and no matching options 1`] = `
<div
  className="woocommerce-search-list "
>
  <div
    className="woocommerce-search-list__selected"
  >
    <div
      className="woocommerce-search-list__selected-header"
    >
      <strong>
        0 items selected
      </strong>
    </div>
  </div>
  <div
    className="woocommerce-search-list__search"
  >
    <div
      className="components-base-control"
    >
      <div
        className="components-base-control__field"
      >
        <label
          className="components-base-control__label"
          htmlFor="inspector-text-control-7"
        >
          Search for items
        </label>
        <input
          className="components-text-control__input"
          id="inspector-text-control-7"
          onChange={[Function]}
          type="search"
          value="no matches"
        />
      </div>
    </div>
  </div>
  <div
    className="woocommerce-search-list__list is-not-found"
  >
    <span
      className="woocommerce-search-list__not-found-icon"
    >
      <svg
        aria-hidden="true"
        className="gridicon gridicons-notice-outline"
        focusable="false"
        height={24}
        role="img"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M12 4c4.41 0 8 3.59 8 8s-3.59 8-8 8-8-3.59-8-8 3.59-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
          />
        </g>
      </svg>
    </span>
    <span
      className="woocommerce-search-list__not-found-text"
    >
      No results for no matches
    </span>
  </div>
</div>
`;

exports[`SearchListControl should render a search box with a search term, and only matching options 1`] = `
<div
  className="woocommerce-search-list "
>
  <div
    className="woocommerce-search-list__selected"
  >
    <div
      className="woocommerce-search-list__selected-header"
    >
      <strong>
        0 items selected
      </strong>
    </div>
  </div>
  <div
    className="woocommerce-search-list__search"
  >
    <div
      className="components-base-control"
    >
      <div
        className="components-base-control__field"
      >
        <label
          className="components-base-control__label"
          htmlFor="inspector-text-control-5"
        >
          Search for items
        </label>
        <input
          className="components-text-control__input"
          id="inspector-text-control-5"
          onChange={[Function]}
          type="search"
          value="berry"
        />
      </div>
    </div>
  </div>
  <div
    className="woocommerce-search-list__list components-menu-group"
  >
    <div
      aria-hidden="true"
      className="components-menu-group__label"
      id="components-menu-group-label-4"
    >
      Results
    </div>
    <div
      aria-labelledby="components-menu-group-label-4"
      role="group"
    >
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Elder<strong>berry</strong>",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Mul<strong>berry</strong>",
              }
            }
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SearchListControl should render a search box with a search term, and only matching options, regardless of case sensitivity 1`] = `
<div
  className="woocommerce-search-list "
>
  <div
    className="woocommerce-search-list__selected"
  >
    <div
      className="woocommerce-search-list__selected-header"
    >
      <strong>
        0 items selected
      </strong>
    </div>
  </div>
  <div
    className="woocommerce-search-list__search"
  >
    <div
      className="components-base-control"
    >
      <div
        className="components-base-control__field"
      >
        <label
          className="components-base-control__label"
          htmlFor="inspector-text-control-6"
        >
          Search for items
        </label>
        <input
          className="components-text-control__input"
          id="inspector-text-control-6"
          onChange={[Function]}
          type="search"
          value="bERry"
        />
      </div>
    </div>
  </div>
  <div
    className="woocommerce-search-list__list components-menu-group"
  >
    <div
      aria-hidden="true"
      className="components-menu-group__label"
      id="components-menu-group-label-5"
    >
      Results
    </div>
    <div
      aria-labelledby="components-menu-group-label-5"
      role="group"
    >
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Elder<strong>berry</strong>",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Mul<strong>berry</strong>",
              }
            }
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SearchListControl should render a search box, a list of options, and 1 selected item 1`] = `
<div
  className="woocommerce-search-list "
>
  <div
    className="woocommerce-search-list__selected"
  >
    <div
      className="woocommerce-search-list__selected-header"
    >
      <strong>
        1 item selected
      </strong>
      <button
        aria-label="Clear all selected items"
        className="components-button is-link is-destructive"
        onClick={[Function]}
        type="button"
      >
        Clear all
      </button>
    </div>
    <span
      className="woocommerce-tag has-remove"
    >
      <span
        className="woocommerce-tag__text"
        id="woocommerce-tag__label-0"
      >
        <span
          className="screen-reader-text"
        >
          Clementine
        </span>
        <span
          aria-hidden="true"
        >
          Clementine
        </span>
      </span>
      <button
        aria-describedby="woocommerce-tag__label-0"
        aria-label="Remove Clementine"
        className="components-button woocommerce-tag__remove"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="dashicon dashicons-dismiss"
          focusable={false}
          height={20}
          role="img"
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
          />
        </svg>
      </button>
    </span>
  </div>
  <div
    className="woocommerce-search-list__search"
  >
    <div
      className="components-base-control"
    >
      <div
        className="components-base-control__field"
      >
        <label
          className="components-base-control__label"
          htmlFor="inspector-text-control-2"
        >
          Search for items
        </label>
        <input
          className="components-text-control__input"
          id="inspector-text-control-2"
          onChange={[Function]}
          type="search"
        />
      </div>
    </div>
  </div>
  <div
    className="woocommerce-search-list__list components-menu-group"
  >
    <div
      aria-hidden="true"
      className="components-menu-group__label"
      id="components-menu-group-label-2"
    >
      Results
    </div>
    <div
      aria-labelledby="components-menu-group-label-2"
      role="group"
    >
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Apricots",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={true}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              fill="#1E8CBE"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Clementine",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Elderberry",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Guava",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Lychee",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Mulberry",
              }
            }
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SearchListControl should render a search box, a list of options, and 2 selected item 1`] = `
<div
  className="woocommerce-search-list "
>
  <div
    className="woocommerce-search-list__selected"
  >
    <div
      className="woocommerce-search-list__selected-header"
    >
      <strong>
        2 items selected
      </strong>
      <button
        aria-label="Clear all selected items"
        className="components-button is-link is-destructive"
        onClick={[Function]}
        type="button"
      >
        Clear all
      </button>
    </div>
    <span
      className="woocommerce-tag has-remove"
    >
      <span
        className="woocommerce-tag__text"
        id="woocommerce-tag__label-1"
      >
        <span
          className="screen-reader-text"
        >
          Clementine
        </span>
        <span
          aria-hidden="true"
        >
          Clementine
        </span>
      </span>
      <button
        aria-describedby="woocommerce-tag__label-1"
        aria-label="Remove Clementine"
        className="components-button woocommerce-tag__remove"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="dashicon dashicons-dismiss"
          focusable={false}
          height={20}
          role="img"
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
          />
        </svg>
      </button>
    </span>
    <span
      className="woocommerce-tag has-remove"
    >
      <span
        className="woocommerce-tag__text"
        id="woocommerce-tag__label-2"
      >
        <span
          className="screen-reader-text"
        >
          Guava
        </span>
        <span
          aria-hidden="true"
        >
          Guava
        </span>
      </span>
      <button
        aria-describedby="woocommerce-tag__label-2"
        aria-label="Remove Guava"
        className="components-button woocommerce-tag__remove"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="dashicon dashicons-dismiss"
          focusable={false}
          height={20}
          role="img"
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
          />
        </svg>
      </button>
    </span>
  </div>
  <div
    className="woocommerce-search-list__search"
  >
    <div
      className="components-base-control"
    >
      <div
        className="components-base-control__field"
      >
        <label
          className="components-base-control__label"
          htmlFor="inspector-text-control-3"
        >
          Search for items
        </label>
        <input
          className="components-text-control__input"
          id="inspector-text-control-3"
          onChange={[Function]}
          type="search"
        />
      </div>
    </div>
  </div>
  <div
    className="woocommerce-search-list__list components-menu-group"
  >
    <div
      aria-hidden="true"
      className="components-menu-group__label"
      id="components-menu-group-label-3"
    >
      Results
    </div>
    <div
      aria-labelledby="components-menu-group-label-3"
      role="group"
    >
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Apricots",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={true}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              fill="#1E8CBE"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Clementine",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Elderberry",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={true}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              fill="#1E8CBE"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Guava",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Lychee",
              }
            }
          />
        </span>
      </button>
      <button
        aria-checked={false}
        className="components-button components-menu-item__button  woocommerce-search-list__item depth-0"
        onClick={[Function]}
        role="menuitemcheckbox"
        type="button"
      >
        <span
          className="woocommerce-search-list__item-state"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              fill="#6C7781"
            />
          </svg>
        </span>
        <span
          className="woocommerce-search-list__item-label"
        >
          <span
            className="woocommerce-search-list__item-name"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Mulberry",
              }
            }
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
